--- a/main.tex
+++ b/main.tex
@@ -226,7 +226,10 @@
 \DeclareMathOperator{\Der}{Der}
 \DeclareMathOperator{\PDer}{PDer}
 \DeclareMathOperator{\Ext}{Ext}
+
+\DeclareMathOperator{\trdeg}{\mathrm{tr} \deg}
 %
+\newcommand{\Resf}[1]{\big|_{#1}}
 
 \newcommand{\ob}{\overline}
 \DeclareMathOperator{\ord}{ord}
@@ -345,6 +348,7 @@
 \include{fields/week4}
 \include{fields/week5}
 \include{fields/week6}
+\include{fields/week8}
 
 \printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
