--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,7 @@
 \usepackage[shortlabels, inline]{enumitem}
 \usepackage{xpatch}
 \usepackage{imakeidx}
+\usepackage{bm}
 \usepackage{hvindex}
 %%% fix bugs in hvindex .................
 \def\IndexXXii#1!#2@#3@#4\IndexNIL{%
@@ -345,6 +346,8 @@
 \include{fields/week4}
 \include{fields/week5}
 \include{fields/week6}
+\include{fields/week7}
+\include{fields/week8}
 
 \printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
