--- a/fields/week7.tex
+++ b/fields/week7.tex
@@ -3,15 +3,104 @@
 Let $f(x)$ be separable in $K[x]$ and $L = K(\alpha_1, \dots, \alpha_n)$ be a splitting field of
 $f$ over $K$. The goal is to find $\Gal(L/K)$ which is in $S_n$.
 
-Define $\theta \defeq y_1 \alpha_1 + \dots + y_n \alpha_n$. For each $\sigma \in S_n$,
+Define $\theta \triangleq y_1 \alpha_1 + \dots + y_n \alpha_n$. For each $\sigma \in S_n$,
 define $\sigma_y(\theta) \triangleq y_{\sigma(1)} \alpha_1 + \dots + y_{\sigma(n)} \alpha_n$ and
 $\sigma_{\alpha}(\theta) = y_1 \alpha_{\sigma(1)} + \dots + y_n \alpha_{\sigma(n)}$.
 It is easy to see that $\sigma_y^{-1} = \sigma_\alpha$. 
 
 In $L(x, y_1, \dots, y_n)$, we consider $F(x, \bm{y}) = \prod_{\sigma \in S_n} (x - \sigma_y(\theta))
 = \prod_{\sigma^{-1} \in S_n} (x - \sigma_{\alpha}(\theta)) = \prod_{\sigma \in S_n} (x - \sigma_\alpha(\theta))$
+Since each coefficient of $F$ is a symmetric polynomial of $\alpha_1, \dots, \alpha_n$,
+by the fundamental theorem of symmetric polynomials, these symmetric polynomials are
+polynomials of the elementary symmetric polynomials. Thus $F(x, y) \in K[x, y_1, \dots, y_n]$.
 
 Decompose $F$ into irreducible factors in $K[x, y_1, \dots, y_n]$, say $F = F_1 F_2 \dotsm F_r$.
 Notice that for any $\sigma \in S_n$, $F = \sigma_y F = \sigma_y F_1 \cdot \sigma_y F_2 \dotsm \sigma_y F_r$.
-For convenience, assume $(x - \theta) \mid F_1$, 
+And each $F_i$ is map to some $F_j$, thus $\sigma$ induces a permutation of $F_1, F_2, \dots, F_r$.
 
+For convenience, assume $(x - \theta) \mid F_1$. We have the following lemma:
+
+\begin{lemma}
+  \[ Q \triangleq \Set{ \sigma \mid \sigma_y F_1 = F_1 } = \Set{ \sigma \mid \sigma_y(x - \theta) \mid F_1} \]
+  \begin{proof}
+    ``$\subseteq$'': Since $x - \theta \mid F_1$, so $\sigma_y (x - \theta) \mid \sigma_y F_1 = F_1$.
+
+    ``$\supseteq$'': $\sigma_y(x - \theta) = x - \sigma_y(\theta) \mid \sigma_y(F_1)$, so $\sigma_y(F_1)$
+    and $F_1$ has a common factor. Since $F$ is separable, $\sigma_y(F_1) = F_1$.
+  \end{proof}
+\end{lemma}
+
+\begin{prop}
+  $\Gal(L/K) = Q$.
+
+  \begin{proof}
+    ``$\subseteq$'': For each $\sigma \in \Gal(L/K) \hookrightarrow S_n$, extend $\sigma$ to
+    \[
+      \arraycolsep=1pt
+      \begin{array}{rccc}
+        \tilde\sigma: & L(y_1, \dots, y_n) & \to & L(y_1, \dots, y_n) \\
+        & \alpha \in L & \mapsto & \sigma(\alpha) \\
+        & y_i & \mapsto & y_i
+      \end{array}
+    \]
+    The automorphism fixes $K(y_1, \dots, y_n)$, so
+    $\tilde\sigma(\theta) = \sigma_\alpha(\theta)$ and $\theta$ share the
+    same minimum polynomial over $K(y_1, \dots, y_n)$.
+    By Gauss lemma, $F_1$ is irreducible in $K[y_1, \dots, y_n][x]$ so is irreducible
+    in $K(y_1, \dots, y_n)[x]$, thus $F_1 = m_{\theta, K(y_1, \dots, y_n)}
+    = m_{\sigma_\alpha(\theta), K(y_1, \dots, y_n)}$, which implies $(x - \sigma_\alpha(\theta)) \mid F_1$.
+    So $\sigma_y^{-1} \in Q \implies \sigma_y \in Q$.
+
+    ``$\supseteq$'': For any $\sigma \in Q$, $F_1 = m_{\theta, K(y_1, \dots, y_n)}
+    = m_{\sigma^{-1}_\alpha(\theta), K(y_1, \dots, y_n)}$, so exists
+    $\tau \in \Aut(L(\bm{y}) / K(\bm{y}))$ which satisfied
+    $\tau(\theta) = \sigma_\alpha^{-1}(\theta) = \sigma_y(\theta)$.
+    Since $L/K$ normal, $\tau(L) = L$ and thus $\tau\big|_L \in \Gal(L/K)$ with
+    $\tau\big|_L(\alpha_i) = \alpha_{\sigma^{-1}(i)}$, which implies that
+    $\sigma^{-1} \in \Gal(L/K) \implies \sigma \in \Gal(L/K)$.
+  \end{proof}
+\end{prop}
+
+\begin{theorem}
+  Let $f(x)$ be monic, separable, in $\Zb[x]$. Assume $p \nmid D = \prod_{i < j} (\alpha_i - \alpha_j)^2$,
+  then the Galois group of $\bar{f}(x)$ in $\Fb_p[x]$ is a subgroup of the Galois group of $f(x)$.
+
+  \begin{proof}
+    Since $f$ is separable, $D \neq 0$. The discriminant could be calculate
+    by $D = (-1)^{n(n+1)/2} R(f, f')$ which only depends on the coefficient,
+    so $\bar{D} \neq 0$ in $\Fb_p$ since $p \nmid D$. Thus $f$ separable.
+
+    As above, let $F = F_1 F_2 \dotsm F_r$ in $\Zb[x, \bm{y}]$.
+    Assume $f(x) = x^n + a_{n-1} x^{n-1} + \dots + a_0$, then $bar{f}(x) = x^n + \bar{a}_{n-1}x^{n-1} + \dots + \bar{a}_0$.
+    Let $\alpha_1, \dots, \alpha_n$ and $\beta_1, \dots, \beta_n$ be their roots, respectively.
+    Define $\theta_p \triangleq y_1 \beta_1 + \dots + y_n \beta_n$.
+    Since the coefficients of $F$ are symmetric polynomial of $\alpha_1, \dots, \alpha_n$, which
+    only depends on the coefficients of $f$, and so is $F_p(x, y) = \prod_{\sigma \in S_n}(x - \sigma_y(\theta_p))$,
+    we know that $F_p(x, y) = \bar{F}(x, y)$.
+
+    Now $\bar{F} = \bar{F}_1 \bar{F}_2 \dotsm \bar{F}_r
+    = (G_{1, 1} \dotsm G_{1, q_1})(G_{2, 1} \dotsm G_{2, q_2}) \dotsm (G_{r, 1} \dotsm G_{r, q_r})$
+
+    The Galois group of $\bar{f}$ is
+    \[ \Set{ \sigma \in S_n : \sigma_y G_{1, j} = G_{1, j}, \, \forall j }
+      \subseteq \Set{ \sigma \in S_n : \sigma_y F_1 = F_1 } = \Set{\sigma \in S_n : \sigma_y F_1 = F_1} \]
+    Where the equality holds because $\sigma_y \bar{F}_1 = \bar{F}_1 \iff (x - \sigma_y(\theta_p)) \mid \bar{F}_1
+    \iff (x - \sigma_y(\theta)) \mid F_1 \iff \sigma_y F_1 = F_1$. Thus the galois group
+    of $\bar{f}$ is a subgroup of $f$.
+  \end{proof}
+\end{theorem}
+
+\begin{fact} \hfill
+  \begin{itemize}
+    \item Every finite extension of $\Fb_p$ is cyclic, so the Galois group of $\bar{f}(x)$
+      in $\Fb_p[x]$ is cyclic.
+    \item If $\bar{f}$ is irreducible, then the Galois group of $\bar{f}$ is transitive on its roots,
+      thus the only possibililty is a cycle of length $n = \deg \bar{f}$ in $S_n$.
+    \item If $\bar{f} = \bar{f}_1 \dotsm \bar{f}_r$, with each $\bar{f}_i$ irreducible.
+      Let the Galois group be $\langle \sigma \rangle$, then $\sigma$ should be
+      transitive on the roots of each $\bar{f}_i$. The only possibility of $\sigma$
+      is a permutation composited by cycles of length $\deg \bar{f}_1, \dots, \deg \bar{f}_r$.
+      That is, $\sigma = \cycle{\alpha_{1,1}, \dots, \alpha_{1, m_1}} \dotsm
+      \cycle{\alpha_{r,1}, \dots, \alpha_{r, m_r}}$ where $m_i \triangleq \deg \bar{f}_i$.
+  \end{itemize}
+\end{fact}
