--- a/hw/week8.tex
+++ b/hw/week8.tex
@@ -12,3 +12,11 @@
   + \mathrm{tr} \deg_K M$.
 \end{exercise}
 
+\begin{exercise}
+  Show that for any extension $L/K$, $\mathrm{Tr} : L \to K$ is surjective.
+\end{exercise}
+
+\begin{exercise}
+  If $L/K$ with $|L| < \infty$, show that $\mathrm{N}_{L/K} : L^\times \to K^\times$
+  is also surjective.
+\end{exercise}
