--- a/fields/week8.tex
+++ b/fields/week8.tex
@@ -156,7 +156,8 @@ Let $L = K(\alpha)$ with $f = m_{\alpha, K} = x^n + a_{n-1} x^{n-1} + \dots + a_
 We have known that exists exactly $n$ monomorphisms $\sigma_i :: L \to \overline{K}$ fixing $K$,
 and $\Set{\sigma_1(\alpha), \dots, \sigma_n(\alpha)}$ consists of all roots of $f$.
 So
-\begin{multline*} x^n + a_{n-1} x^{n-1} + \dots + \a_0 = (x - \sigma_1(\alpha)) \dotsm (x - \sigma_n(\alpha)) \\
+\begin{multline*}
+  x^n + a_{n-1} x^{n-1} + \dots + a_0 = (x - \sigma_1(\alpha)) \dotsm (x - \sigma_n(\alpha)) \\
   \implies -a_{n-1} = \sigma_1(\alpha) + \dots + \sigma_n(\alpha) \text{ and }
   (-1)^n a_0 = \sigma_1(\alpha) \dotsm \sigma_n(\alpha)
 \end{multline*}
@@ -179,10 +180,10 @@ So
 
   \begin{proof}
     \begin{enumerate}
-      \item ``\Leftarrow'': 
-      ``\Rightarrow'':  Since automorphisms are 
-      \item ``\Leftarrow'': 
-        ``\Rightarrow'':  Choose $c$ such that $\beta_1 = c + \sigma(c) + \dots + \sigma^{n-1}(c) \neq 0$, so $\sigma(\beta_1) = \beta_1$.
+      \item ``$\Leftarrow$'': 
+      ``$\Rightarrow$'':  Since automorphisms are 
+      \item ``$\Leftarrow$'': 
+        ``$\Rightarrow$'':  Choose $c$ such that $\beta_1 = c + \sigma(c) + \dots + \sigma^{n-1}(c) \neq 0$, so $\sigma(\beta_1) = \beta_1$.
         Let $\beta_2$.
     \end{enumerate}
   \end{proof}
