--- a/hw/week8.tex
+++ b/hw/week8.tex
@@ -13,10 +13,10 @@
 \end{exercise}
 
 \begin{exercise}
-  Show that for any extension $L/K$, $\mathrm{Tr} : L \to K$ is surjective.
+  Show that for any extension $L/K$, $\trace : L \to K$ is surjective.
 \end{exercise}
 
 \begin{exercise}
-  If $L/K$ with $|L| < \infty$, show that $\mathrm{N}_{L/K} : L^\times \to K^\times$
+  If $L/K$ with $\abs{L} < \infty$, show that $\mathrm{N}_{L/K} : L^\times \to K^\times$
   is also surjective.
 \end{exercise}
