--- a/fields/week8.tex
+++ b/fields/week8.tex
@@ -165,10 +165,10 @@ So
 \begin{definition}
   Let $L/K$ be a Galois extension with $G = \Gal(L/K)$.
   for all $\alpha \in L$, define 
-  \begin{align*}
-    N_{L/K}(\alpha) &= \prod_{\sigma \in G} \sigma(\alpha) & N_{L/K} :: L^\times \to K^\times \text{multiplicative} \\
-    \trace_{L/K}(\alpha) &= \sum{\sigma \in G} \sigma(\alpha) & \trace{L/K} :: L \to K \text{additive}
-  \end{align*}
+  \begin{alignat*}
+    N_{L/K}(\alpha) &= \prod_{\sigma \in G} \sigma(\alpha) \quad\quad && N_{L/K} :: L^\times \to K^\times \text{multiplicative} \\
+    \trace_{L/K}(\alpha) &= \sum_{\sigma \in G} \sigma(\alpha) \quad\quad && \trace_{L/K} :: L \to K \text{additive}
+  \end{alignat*}
 \end{definition}
 
 \begin{theorem}
